; ModuleID = '/home/carl/AnghaBench/libgit2/tests/object/tree/extr_frompath.c_assert_tree_from_path.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/object/tree/extr_frompath.c_assert_tree_from_path.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i8*, i8*)* @assert_tree_from_path to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @assert_tree_from_path(i32* %0, i8* %1, i8* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  store i8* %2, i8** %6, align 8
  %8 = load i32*, i32** %4, align 8
  %9 = load i8*, i8** %5, align 8
  %10 = call i32 @git_tree_entry_bypath(i32** %7, i32* %8, i8* %9)
  %11 = call i32 @cl_git_pass(i32 %10)
  %12 = load i32*, i32** %7, align 8
  %13 = call i32 @git_tree_entry_name(i32* %12)
  %14 = load i8*, i8** %6, align 8
  %15 = call i32 @cl_assert_equal_s(i32 %13, i8* %14)
  %16 = load i32*, i32** %7, align 8
  %17 = call i32 @git_tree_entry_free(i32* %16)
  ret void
}

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_tree_entry_bypath(i32**, i32*, i8*) #1

declare dso_local i32 @cl_assert_equal_s(i32, i8*) #1

declare dso_local i32 @git_tree_entry_name(i32*) #1

declare dso_local i32 @git_tree_entry_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
